--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ a:hover, a:focus, a:active {
   color: #3da1a7;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5 {
   font-family: "Open Sans", Arial, sans-serif;
   color: #000;
   margin-bottom: 30px;
@@ -36,6 +36,7 @@ h1, h2, h3, h4, h5, h6 {
 p {
   margin-bottom: 30px;
 }
+
 
 .btn {
   margin-right: 4px;
@@ -563,7 +564,6 @@ p {
 #fh5co-services {
   position: relative;
   padding: 7em 0;
-  background: #e8ecf1;
 }
 @media screen and (max-width: 768px) {
   #fh5co-services {
@@ -628,7 +628,7 @@ p {
   padding-right: 10px;
   margin-bottom: 0px;
   padding: 20px 20px 20px 20px;
-  background: #e8ecf1;
+  background: #fff;
   border: 1px solid transparent;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
@@ -669,15 +669,15 @@ p.terms {
 
 p.links {
     text-align: left;
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 500;
     margin-bottom: 0px;
 }
 
 
+
 #fh5co-services .service:hover, #fh5co-services .service:focus {
-    border: 1px solid #e6e6e6;
-    background: #eff2f5;
+  border: 1px solid #e6e6e6;
   -webkit-box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.09);
   -moz-box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.09);
   -ms-box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.09);
@@ -742,7 +742,7 @@ p.links {
 #fh5co-team {
   clear: both;
   padding: 7em 0;
-  background: #d0d8e2;
+  background: #E8ECF1;
 }
 @media screen and (max-width: 768px) {
   #fh5co-team {
@@ -752,7 +752,7 @@ p.links {
 #fh5co-team .person {
   padding: 30px;
   margin-bottom: 30px;
-  text-align: center;
+  /* text-align: center; */
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s;
@@ -760,7 +760,7 @@ p.links {
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
   border-radius: 5px;
-  background: #d0d8e2;
+  background: #fff;
 }
 #fh5co-team .person img {
   width: 190px;
@@ -804,16 +804,24 @@ p.links {
   padding: 10px;
 }
 #fh5co-team .person .social li a:hover {
-    text-decoration: none;
-    background: #dfe5ec;
+  text-decoration: none;
 }
 #fh5co-team .person:focus, #fh5co-team .person:hover {
-  background: #dfe5ec;
+  background: #fff;
   -webkit-box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.09);
   -moz-box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.09);
   -ms-box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.09);
   box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.09);
 }
+
+#fh5co-team .person p {
+    text-align: left;
+    font-size: 14px;
+    font-weight: 500;
+    margin-bottom: 0px;
+}
+
+
 
 #fh5co-gallery {
   clear: both;
@@ -1344,5 +1352,7 @@ article {
      -moz-column-gap: 0em;
           column-gap: 0em;
 }
+
+
 
 /*# sourceMappingURL=style.css.map */
