--- a/css/style.css
+++ b/css/style.css
@@ -564,6 +564,7 @@ p {
 #fh5co-services {
   position: relative;
   padding: 7em 0;
+  background: #e8ecf1;
 }
 @media screen and (max-width: 768px) {
   #fh5co-services {
@@ -628,7 +629,7 @@ p {
   padding-right: 10px;
   margin-bottom: 0px;
   padding: 20px 20px 20px 20px;
-  background: #fff;
+  background: #e8ecf1;
   border: 1px solid transparent;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
@@ -677,7 +678,8 @@ p.links {
 
 
 #fh5co-services .service:hover, #fh5co-services .service:focus {
-  border: 1px solid #e6e6e6;
+    border: 1px solid #e6e6e6;
+    backgroud: #eff2f5;
   -webkit-box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.09);
   -moz-box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.09);
   -ms-box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.09);
@@ -742,7 +744,7 @@ p.links {
 #fh5co-team {
   clear: both;
   padding: 7em 0;
-  background: #E8ECF1;
+  background: #d0d8e2;
 }
 @media screen and (max-width: 768px) {
   #fh5co-team {
@@ -760,7 +762,7 @@ p.links {
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
   border-radius: 5px;
-  background: #fff;
+  background: #d0d8e2;  
 }
 #fh5co-team .person img {
   width: 190px;
@@ -804,10 +806,11 @@ p.links {
   padding: 10px;
 }
 #fh5co-team .person .social li a:hover {
-  text-decoration: none;
+    text-decoration: none;
+    background: #fff;    
 }
 #fh5co-team .person:focus, #fh5co-team .person:hover {
-  background: #fff;
+  background: #d0d8e2;
   -webkit-box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.09);
   -moz-box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.09);
   -ms-box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.09);
