--- a/themes/hugo-icon/static/css/style.css
+++ b/themes/hugo-icon/static/css/style.css
@@ -1,4 +1,4 @@
-@font-face {
+%@font-face {
   font-family: 'icomoon';
   src: url("../fonts/icomoon/icomoon.eot?srf3rx");
   src: url("../fonts/icomoon/icomoon.eot?srf3rx#iefix") format("embedded-opentype"), url("../fonts/icomoon/icomoon.ttf?srf3rx") format("truetype"), url("../fonts/icomoon/icomoon.woff?srf3rx") format("woff"), url("../fonts/icomoon/icomoon.svg?srf3rx#icomoon") format("svg");
@@ -219,7 +219,7 @@ p {
   -moz-box-shadow: inset -1px -11px 21px -15px rgba(0, 0, 0, 0.75);
   box-shadow: inset -1px -11px 21px -15px rgba(0, 0, 0, 0.75);
   position: relative;
-  background: #E8ECF1;
+  background: #DEE2E6;
 }
 #fh5co-home > .container {
   position: relative;
@@ -563,7 +563,7 @@ p {
 #fh5co-services {
   position: relative;
   padding: 7em 0;
-  background: #e8ecf1;
+  background: #dee2e6;
 }
 @media screen and (max-width: 768px) {
   #fh5co-services {
@@ -628,7 +628,7 @@ p {
   padding-right: 10px;
   margin-bottom: 0px;
   padding: 20px 20px 20px 20px;
-  background: #e8ecf1;
+  background: #dee2e6;
   border: 1px solid transparent;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
@@ -943,7 +943,7 @@ p.links {
 #fh5co-contact .form-control {
   border: none;
   box-shadow: none;
-  border-bottom: 1px solid #E8ECF1;
+  border-bottom: 1px solid #DEE2E6;
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   -ms-border-radius: 0;
@@ -955,7 +955,7 @@ p.links {
 
 #fh5co-footer {
   padding: 3em 0;
-  background: #E8ECF1;
+  background: #DEE2E6;
   -webkit-box-shadow: inset 0px 10px 21px -15px rgba(0, 0, 0, 0.12);
   -moz-box-shadow: inset 0px 10px 21px -15px rgba(0, 0, 0, 0.12);
   box-shadow: inset 0px 10px 21px -15px rgba(0, 0, 0, 0.12);
